Add website metadata

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en-US">
   <head>
+    <title>Selim Tirellil - Software Engineer</title>
+    <meta name="description" content="Personal portfolio of Selim Tirellil">
+    <meta name="keywords" content="portfolio, developer, software, webdev, gamedev">
+    <meta name="author" content="Selim Tirellil">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
